# zenith

./: Cargo.toml  OPTIMIZER_README.md  config.toml  live.toml  optimizer.toml  optimizer_supertrend_example.toml  portfolio.toml
crates/alerter/: Cargo.toml
crates/alerter/src/: error.rs  lib.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: engine.rs  error.rs  lib.rs  report.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: error.rs  lib.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: auth.rs  error.rs  lib.rs  live_connector.rs  responses.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: error.rs  lib.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: error.rs  lib.rs  optimizer_config.rs  settings.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: enums.rs  error.rs  lib.rs  structs.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20250731231333_initial_schema.up.sql  20250801010744_add_close_time_to_klines.down.sql  20250801010744_add_close_time_to_klines.up.sql  20250802233550_add_wfo_tables.up.sql
crates/database/src/: connection.rs  error.rs  lib.rs  repository.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  event.rs  lib.rs  reconciler.rs  risk_manager.rs  util.rs
crates/events/: Cargo.toml
crates/events/src/: error.rs  lib.rs  messages.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  exchange.rs  lib.rs  portfolio.rs
crates/ml-features/: Cargo.toml
crates/ml-trainer/: Cargo.toml
crates/ml-trainer/src/: features.rs  labeling.rs  main.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: error.rs  generator.rs  lib.rs
crates/portfolio-backtester/: Cargo.toml
crates/portfolio-backtester/src/: data_handler.rs  error.rs  lib.rs  manager.rs
crates/risk/: Cargo.toml
crates/risk/src/: error.rs  lib.rs  simple_manager.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: error.rs  factory.rs  funding_rate_arb.rs  lib.rs  ma_crossover.rs  ml_strategy.rs  prob_reversion.rs  super_trend.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: error.rs  handlers.rs  lib.rs  main.rs
crates/wfo/: Cargo.toml
crates/wfo/src/: error.rs  lib.rs
datasets/: btc_1h_features.parquet  btc_1h_features_enhanced.parquet
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/optimizations/: page.tsx
frontend/src/app/admin/optimizations/[jobId]/: page.tsx
frontend/src/app/admin/runs/[runId]/: page.tsx
frontend/src/app/admin/single-runs/: page.tsx
frontend/src/app/admin/wfo-jobs/: page.tsx
frontend/src/components/: query-provider.tsx
frontend/src/components/dashboard/: DrawdownChart.tsx  EquityCurveChart.tsx  FullMetricsTable.tsx  JobDetailsTable.tsx  JobsDataTable.tsx  KpiCard.tsx  PnlPerTradeChart.tsx  Sidebar.tsx  SingleRunsTable.tsx  TradeHistoryTable.tsx  WfoJobsTable.tsx
frontend/src/components/dashboard/live/: KlineDataDisplay.tsx  LiveLogStream.tsx  LiveStatusHeader.tsx  OpenPositionsTable.tsx  PortfolioVitals.tsx  SessionEquityChart.tsx
frontend/src/hooks/: useDynamicTitle.ts  useLiveSocket.ts  useZenithApi.ts
frontend/src/services/: api.ts
frontend/src/store/: live.ts
frontend/src/types/: zenith.ts
src/: lib.rs  main.rs
