[package]
name = "zenith"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/core-types",
    "crates/events",
    "crates/strategies",
    "crates/analytics",
    "crates/risk",
    "crates/engine",
    "crates/backtester",
    "crates/optimizer",
    "crates/database",
    "crates/api-client",
    "crates/web-server", "crates/configuration", "crates/executor", "crates/analyzer", "crates/wfo", "crates/portfolio-backtester",
]
resolver = "2"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# The application orchestrates these crates to perform its tasks.
analyzer = { path = "crates/analyzer" }
analytics = { path = "crates/analytics" }
api-client = { path = "crates/api-client" }
backtester = { path = "crates/backtester" }
configuration = { path = "crates/configuration" , features = ["clap"] }
engine = { path = "crates/engine" }

# For decimal number literals in the main application
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
optimizer = { path = "crates/optimizer" }
core-types = { path = "crates/core-types" }
database = { path = "crates/database" }
executor = { path = "crates/executor" }
portfolio-backtester = { path = "crates/portfolio-backtester" }
risk = { path = "crates/risk" }
strategies = { path = "crates/strategies" }
wfo = { path = "crates/wfo" }
web-server = { path = "crates/web-server" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# The primary async runtime for the application.
tokio = { version = "1", features = ["full"] }
comfy-table = "7.1"
# For building a powerful and ergonomic command-line interface.
# The "derive" feature allows us to define our CLI with simple structs.
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# For loading the DATABASE_URL and other secrets from the .env file at startup.
dotenvy = "0.15"



# Provides utilities for working with async futures, essential for concurrent downloads.
futures = "0.3"

# For creating beautiful and functional command-line progress bars.
indicatif = { version = "0.18", features = ["tokio"] }
tracing-indicatif = "0.3"
# For handling dates provided as command-line arguments.
chrono = "0.4"

# For flexible error handling
anyhow = "1.0"

# For JSON serialization/deserialization
serde_json = "1.0"

# For database access
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }