[package]
name = "alerter"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# Needs configuration to get the bot token and chat ID.
configuration = { path = "../configuration" }
# Needs events to understand the `WsMessage` it will be listening for.
events = { path = "../events" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# The async runtime, as this will be a long-running service.
tokio = { version = "1", features = ["full"] }

# For creating the crate's specific error types.
thiserror = "1.0"

# The HTTP client for making requests to the Telegram Bot API.
reqwest = { version = "0.12", features = ["json"] }

# For creating the JSON payload for the Telegram API.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For receiving events from the engine.
tracing = "0.1"