[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# Depends on core-types to understand the `Trade` and `Position` structs,
# which are the inputs for its calculations.
core-types = { path = "../core-types" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# Required because the PerformanceReport struct will contain Decimal types.
rust_decimal = "1.35"

# For making the PerformanceReport struct serializable.
serde = { version = "1.0", features = ["derive"] }

# For creating structured, specific error types for this crate.
thiserror = "2.0"

# For handling the timestamps in the equity curve and calculating time-based metrics.
chrono = { version = "0.4", features = ["serde"] }

humantime-serde = "1.1"