[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# Depends on the database to fetch the performance reports that need to be analyzed.
database = { path = "../database" }

# Depends on configuration to get the analysis rules (filters and weights).
configuration = { path = "../configuration" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# For creating the crate's specific error types.
thiserror = "2.0"

# For creating the `RankedReport` struct which will be serializable.
serde = { version = "1.0", features = ["derive"] }

# The analyzer will be dealing with JSONB data (parameters) from the database.
serde_json = "1.0"

# The analyzer will be dealing with high-precision decimals from the reports.
rust_decimal = "1.35"

# For generating unique IDs if ever needed.
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }