[package]
name = "api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
core-types = { path = "../core-types" }
configuration = { path = "../configuration" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# --- HTTP Client ---
reqwest = { version = "0.12", features = ["json"] }
serde_qs = "0.12"

# --- WebSocket Client (NEW) ---
# The core async WebSocket library, built on top of Tokio.
# The "native-tls" feature is required to connect to secure "wss://" endpoints.
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
# Provides stream utilities, including the `StreamExt` trait needed to loop over messages.
futures-util = "0.3"
# A robust library for parsing and manipulating URLs.
url = "2.5"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Authentication ---
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# --- Utilities ---
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rust_decimal = "1.30.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }