[package]
name = "ml-trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# To load historical kline data for feature generation.
database = { path = "../database" }
core-types = { path = "../core-types" }

# ==============================================================================
# Machine Learning & Data Science Stack (REVISED)
# ==============================================================================
# --- NEW: `smartcore` ---
# A comprehensive, pure-Rust machine learning library.
smartcore = { version = "0.4.0", features = ["serde"] }

# `nalgebra` is the numerical computing foundation for `smartcore`.
nalgebra = "0.32"

# `ndarray` for numerical computing (used by polars and smartcore)
ndarray = "0.15"

# --- END NEW ---

# ... (polars, ta, cli, and utility dependencies are unchanged) ...
polars = { version = "0.37", features = ["lazy", "ndarray", "parquet"] }
ta = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
chrono = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# ==============================================================================
# Logging Dependencies
# ==============================================================================
tracing = "0.1"
tracing-subscriber = "0.3"