[package]
name = "optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# The optimizer needs access to virtually every other component to construct
# and run backtests dynamically.
core-types = { path = "../core-types" }
configuration = { path = "../configuration" }
strategies = { path = "../strategies" }
risk = { path = "../risk" }
executor = { path = "../executor" }
analytics = { path = "../analytics" }
database = { path = "../database" }
backtester = { path = "../backtester" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# The core library for high-performance, data-parallel processing.
# This is the key to running hundreds of backtests in parallel efficiently.
rayon = "1.10"
num_cpus = "1.16"
# For creating the crate's specific error types.
thiserror = "2.0"

# For displaying progress bars during optimization
indicatif = "0.18"

# For handling decimal numbers in parameter generation
rust_decimal = { version = "1.35", features = ["serde", "rust-fuzz"] }
rust_decimal_macros = "1.35"

# For date/time handling
chrono = { version = "0.4", features = ["serde"] }

# For JSON serialization of parameter sets and handling JSONB parameter sets
# that are saved to and read from the DB.
serde_json = "1.0"

# The async runtime, needed because the `run` method will be async.
tokio = { version = "1", features = ["full"] }

# For working with async primitives and combinators
futures = "0.3"

# A powerful iterator library, essential for generating the Cartesian product
# of all parameter combinations.
itertools = "0.14"

# For generating unique IDs for the optimization job and backtest runs.
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }