[package]
name = "portfolio-backtester"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# It needs access to the full stack to load data, build strategies,
# run the simulation, and analyze the final combined results.
core-types = { path = "../core-types" }
configuration = { path = "../configuration" }
strategies = { path = "../strategies" }
risk = { path = "../risk" }
executor = { path = "../executor" }
analytics = { path = "../analytics" }
database = { path = "../database" }
events = { path = "../events" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# For creating the crate's specific error types.
thiserror = "2.0"

# The async runtime, as the main `run` method will be async.
tokio = { version = "1", features = ["full"] }

# For high-precision financial math.
rust_decimal = "1.35"

# For handling dates and timestamps.
chrono = "0.4"

# For providing a command-line progress bar.
indicatif = { version = "0.18", features = ["tokio"] }

# For handling the JSON parameter objects.
serde_json = "1.0"

# For generating unique IDs if needed.
uuid = { version = "1.8", features = ["v4"] }

# For async utilities like join_all.
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }