[package]
name = "risk"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# Depends on core-types to understand the `Signal` it receives and the
# `OrderRequest` it produces.
core-types = { path = "../core-types" }

# Depends on configuration to get the risk parameters (e.g., risk_per_trade_pct)
# that are defined in the master config.toml file.
configuration = { path = "../configuration" }

# Depends on events to understand the `PortfolioState` struct, which provides
# the total portfolio equity needed for risk calculations.
events = { path = "../events" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# For all financial calculations to maintain precision.
rust_decimal = { version = "1.35", features = ["db-postgres"] }
rust_decimal_macros = "1.35"

# For creating structured, specific error types for this crate.
thiserror = "2.0"

# For potential future serialization needs.
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }