[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==============================================================================
# Workspace Dependencies
# ==============================================================================
# The web server needs to talk to the database to fetch research results.
database = { path = "../database" }
# It needs the analyzer to rank optimization results on the fly.
analyzer = { path = "../analyzer" }
# It needs the configuration to load settings, especially for the analyzer.
configuration = { path = "../configuration" }

# ==============================================================================
# External Dependencies
# ==============================================================================
# --- Core Web Framework ---
# The main web framework, built by the Tokio team.
axum = { version = "0.7", features = ["ws"] }
# Provides extractors for typed routing and other useful features.
axum-extra = { version = "0.9.5", features = ["typed-routing"] }

# --- Async Runtime ---
# Required for the `#[tokio::main]` macro and the entire async ecosystem.
tokio = { version = "1", features = ["full"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Web Server Utilities ---
# Provides middleware for common tasks like CORS, tracing, etc.
tower-http = { version = "0.5", features = ["cors", "trace"] }


# --- WebSocket Handling ---
# Provides the `StreamExt` trait for handling the WebSocket message stream.
futures-util = "0.3"

# --- Utilities ---
# For handling UUIDs in path parameters (e.g., /api/jobs/:job_id).
uuid = { version = "1.8", features = ["serde", "v4"] }
# For loading the .env file to get the DATABASE_URL.
dotenvy = "0.15"
# For defining the application's error types.
thiserror = "1.0"
anyhow = "1.0"

# --- Tracing ---
# For structured logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }